# KLS_WEBSITE

./: .gemini_pdf_extract.txt  .gitignore  README.md  analysis_kertoripa.md  implementation_plan.md  package-lock.json  pyproject.toml  start-dev.cmd  test_example_b.py
app/: __init__.py  main.py
app/api/: routes.py
app/domain/: __init__.py  calculator.py  combinations.py  fem.py
app/domain/kertoripa/: __init__.py  bending.py  calculator.py  geometry.py  materials.py  serviceability.py  shear.py  support.py  vibration.py
app/schemas/: actions.py  fem.py  floor_joist.py  kertoripa.py
frontend/: index.html  package-lock.json  package.json  preview.css  preview.html  preview.js  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/kerto-ripa/: KertoRipa.css  Step1SectionType.jsx  Wizard.jsx
tests/: test_actions.py  test_actions_api.py  test_api.py  test_calculator.py  test_combinations.py  test_combined_floor_joist.py  test_fem_domain.py  test_fem_postprocess.py  test_fem_schemas.py  test_fem_solver.py
